# drop_code

./: Cargo.toml  README.md
examples/: combination.rs  easy_match.rs  easy_panic.rs  easy_ref.rs  easy_ref2.rs  panic.rs  ref.rs  refmut.rs  seq.rs
src/: core.rs  lib.rs
tests/: easy.rs  logic.rs  memsize.rs  syntax.rs
