[package]
name = "drop_code"
version = "0.1.1"
edition = "2021"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/drop_code.git"
homepage = "https://github.com/clucompany/drop_code.git"
license = "Apache-2.0"
readme = "README.md"

description = " Macro for ensuring critical code execution on function return or panics in Rust, making it easy to include essential code for reliable operation."
keywords = ["drop_code", "macro", "code-transformation", "no_std", "clucompany"]
categories = ["development-tools"]

[dependencies]
