[package]
name = "drop_code"
version = "1.0.1"
edition = "2024"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/drop_code.git"
homepage = "https://github.com/clucompany/drop_code.git"
license = "Apache-2.0"
readme = "README.md"

description = "A macro that allows you to implement code that will be automatically executed after the function code has finished, be it the end of the function or even a panic state."
keywords = ["drop_code", "macro", "code-transformation", "no_std", "clucompany"]
categories = ["development-tools"]

[dependencies]
